0.7.5
=====

2009-12-05
 * add W for writeable values, edit only writable values

2009-11-29
 * added gbm_enabled_above_error grbd parameter

2009-11-07
 * Added ROOT config check, rts2-fit-focus

2009-11-06
 * Support for Astronomical Research Cameras (Leech controllers)

2009-11-03
 * TRIAX monochromator support

2009-11-01
 * Check script before it is added to database
 * Plot date ticks on graphs

2009-10-24
 * Added Markus script for focusing - rts2-autofocus

2009-10-22
 * added night statistic in imgproc - night_good,..
 * added last good image to imgproc

2009-09-22
 * simplified the heating algorith of aag cloud/rain sensor
 * updated the man page

2009-09-13
 * do {} while loops
 * preview paging

2009-09-12
 * added gbm_record_above_error and gbm_error_limit parameters to rts2.ini configuration file
 * fixed error in Rts2CameraDevClient - properly call readoutEnd
 * added while_idle and while scripting elements

2009-09-11
 * removed scripting M (mirror) and F (filter) commands, as they are replaced with value changes

2009-09-05
 * Added after_exposure_cmd, after_exposure_cmd_timoout and after_exposure_cmd_arg parameters

2009-08-10
 * XML-RPC server supports access to the images
 * XML-RPC supports correct authorization

2009-07-25
 * use wasChanged to detect changes inside daemon, to not send values which are the same
 * number of improvements inside XML-RPCD

2009-05-24
 * Added astrometry_devices to imgproc section from rts2.ini

2009-05-22
 * Changed way how MPC ephemerides are stored in database and handled

2009-05-17
 * MPC data are stored in tar_info

2009-05-08
 * queue executor - it is now able to accept queue command to queue next targets
 * startResync function for telescope, change in how abberation etc. are reported

2009-05-06
 * getMinFlatHeigh, min_flat_heigh
 * improvements of rts2-simbadinfo, added manual page

2009-05-04
 * added possibility to select minimal airmass distance for calibration observation selection

2009-05-03