@@ -56,36 +56,7 @@ EllTarget::orbitFromMPC (const char *mpc)
 void
 EllTarget::getPosition (struct ln_equ_posn *pos, double JD, struct ln_equ_posn *parallax)
 {
-	if (orbit.e == 1.0)
-	{
-		struct ln_par_orbit par_orbit;
-		par_orbit.q = orbit.a;
-		par_orbit.i = orbit.i;
-		par_orbit.w = orbit.w;
-		par_orbit.omega = orbit.omega;
-		par_orbit.JD = orbit.JD;
-		ln_get_par_body_equ_coords (JD, &par_orbit, pos);
-	}
-	else if (orbit.e > 1.0)
-	{
-		struct ln_hyp_orbit hyp_orbit;
-		hyp_orbit.q = orbit.a;
-		hyp_orbit.e = orbit.e;
-		hyp_orbit.i = orbit.i;
-		hyp_orbit.w = orbit.w;
-		hyp_orbit.omega = orbit.omega;
-		hyp_orbit.JD = orbit.JD;
-		ln_get_hyp_body_equ_coords (JD, &hyp_orbit, pos);
-	}
-	else
-	{
-		ln_get_ell_body_equ_coords (JD, &orbit, pos);
-	}
-
-	ln_get_parallax (pos, getEarthDistance (JD), observer, 1706, JD, parallax);
-
-	pos->ra += parallax->ra;
-	pos->dec += parallax->dec;
+	LibnovaCurrentFromOrbit (pos, &orbit, observer, 1706, JD, parallax);
 }
 
 
@@ -182,28 +153,7 @@ EllTarget::writeToImage (Rts2Image * image, double JD)
 double
 EllTarget::getEarthDistance (double JD)
 {
-	if (orbit.e == 1.0)
-	{
-		struct ln_par_orbit par_orbit;
-		par_orbit.q = orbit.a;
-		par_orbit.i = orbit.i;
-		par_orbit.w = orbit.w;
-		par_orbit.omega = orbit.omega;
-		par_orbit.JD = orbit.JD;
-		return ln_get_par_body_earth_dist (JD, &par_orbit);
-	}
-	else if (orbit.e > 1.0)
-	{
-		struct ln_hyp_orbit hyp_orbit;
-		hyp_orbit.q = orbit.a;
-		hyp_orbit.e = orbit.e;
-		hyp_orbit.i = orbit.i;
-		hyp_orbit.w = orbit.w;
-		hyp_orbit.omega = orbit.omega;
-		hyp_orbit.JD = orbit.JD;
-		return ln_get_hyp_body_earth_dist (JD, &hyp_orbit);
-	}
-	return ln_get_ell_body_earth_dist (JD, &orbit);
+	return LibnovaEarthDistanceFromMpec (&orbit, JD);
 }
 
 
